--- a/package.json
+++ b/package.json
@@ -15,20 +15,23 @@
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.2",
-    "@tanstack/react-router": "^1.31.1",
+    "@tanstack/react-router": "^1.31.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dexie": "^4.0.4",
     "dexie-react-hooks": "^1.1.7",
-    "embla-carousel-react": "^8.0.2",
+    "fflate": "^0.8.2",
     "lucide-react": "^0.376.0",
+    "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.2.3",
+    "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@tanstack/router-devtools": "^1.31.1",
+    "@tanstack/router-devtools": "^1.31.2",
     "@tanstack/router-vite-plugin": "^1.30.0",
     "@types/node": "^20.12.7",
     "@types/react": "^18.3.1",
